[package]
name = "yule_log"
authors = ["https://github.com/annoybot"]
description = "A streaming parser for PX4 ULOG files."
keywords = ["parser", "ulog", "px4"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/annoybot/yule_log"
version = "0.1.0"
edition = "2021"
publish = true

[dependencies]
byteorder = "1.5.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
regex = "1.11.1"
lazy_static = "1.5.0"

# FIXME: These dependencies are only used in the examples, find some way to exclude them from the library code.
csv = "1.3.0"
rusqlite = "0.29.0"
tempfile = "3.13.0"
mysql = "25.0"
r2d2 = "0.8"
r2d2_mysql = "25.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34+deprecated"

# For AMZN Timestream
aws-config = "1.5.10"
aws-sdk-timestreamwrite = "1.49.0"
rayon = "1.10.0"
tokio = { version = "=1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.17"
tracing-subscriber = "0.3.18"
chrono = "0.4.39"
async-channel = "2.3.1"
