[workspace]
resolver = "2"
members = [
    "core",
    "macros",
    "integration_tests"
]

[workspace.package]
version = "0.3.0"
edition = "2021"

[workspace.dependencies]
proc-macro2 = { version = "1.0.101", default-features = false }
quote       = { version = "1.0.40", default-features = false }
syn         = { version = "2.0.106", default-features = false, features = ["derive", "parsing", "printing"] }
darling     = "0.21.3"
heck        = "0.5.0"