[workspace]
resolver = "2"
members = [
    "core",
    "macros",
    "integration_tests"
]

[workspace.package]
version = "0.3.1"
edition = "2021"

[workspace.dependencies]
proc-macro2 = { version = "1.0", default-features = false }
quote       = { version = "1.0", default-features = false }
syn         = { version = "2.0", default-features = false, features = ["derive", "parsing", "printing"] }
darling     = "0.21"
heck        = "0.5"