[package]
name = "yule_log_macros"
description = "Derive macros for the yule_log ULOG parser crate."
keywords = ["parser", "ulog", "px4"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/annoybot/yule_log"
version = "0.3.2"
edition = "2021"
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote       = { workspace = true, features = ["proc-macro"] }
syn         = { workspace = true, features = ["proc-macro"] }
darling     = { workspace = true }
heck        = { workspace = true }

[package.metadata.docs.rs]
features = []


